--- a/pom.xml
+++ b/pom.xml
@@ -110,8 +110,7 @@
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>3.5.2</version>
                 <configuration>
-                    <outputName>index</outputName> <!-- This changes the output filename -->
-                    <outputDirectory>${project.basedir}/docs</outputDirectory>
+                    <outputDirectory>${project.build.directory}/site</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
